--- a/_includes/author.html
+++ b/_includes/author.html
@@ -1,6 +1,6 @@
 <section class="author" itemprop="author">
     <div class="details" itemscope itemtype="http://schema.org/Person">
-        <img itemprop="image" class="img-rounded" src="/assets/images/blog-author.jpg" alt="{{site.name}}">
+        <img itemprop="image" class="img-rounded" src="https://en.gravatar.com/userimage/79281757/c27ea3ef87fda1295b58f60d191c89e8.jpg?size=200" alt="{{site.name}}">
         <p class="def">Author</p>
         <h3 class="name">
             <a itemprop="name" href="https://plus.google.com/+{{site.gplus_username}}/posts">{{site.username}}</a>
