--- a/_includes/ml-theory-nav.html
+++ b/_includes/ml-theory-nav.html
@@ -41,7 +41,7 @@
         backgroundColor: 'white',
         alignSelf: 'center',
         borderRadius: '20px',
-        border: '5px solid #A61C00',
+        border: '5px solid #0562DC',
         padding: '20px'
     });
     indexDiv.appendChild(heading);
