--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,9 @@
     <link rel="author" href="https://plus.google.com/+{{site.gplus_username}}?rel=author">
 
     <!-- fontawesome library -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">-->
+
+    <!--<link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">-->
 
     <!-- Social: Twitter -->
     <meta name="twitter:card" content="summary_large_image">
@@ -20,7 +22,7 @@
     {% if page.image %}
     <meta property="twitter:image:src" content="{{ site.url }}{{page.image }}">
     {% else %}
-    <meta property="twitter:image:src" content="{{ "/assets/img/blog-image.png" | prepend: site.baseurl | prepend: site.url }}">
+    <meta property="twitter:image:src" content="{{ '/assets/img/blog-image.png' | prepend: site.baseurl | prepend: site.url }}">
     {% endif %}
 
     <!-- Social: Facebook / Open Graph -->
