--- a/_scss/_highlights.scss
+++ b/_scss/_highlights.scss
@@ -16,7 +16,7 @@
 }
  
 code {
-  font-family: 'Courier', monospace;
+  font-family: 'Titillium Web',sans-serif;
   font-size: 14px;
   color: #999
 }
